[gd_scene load_steps=4 format=3 uid="uid://cuata3ed0ecx0"]

[ext_resource type="Script" uid="uid://b1fe750q786h5" path="res://Global/inventory_slot.gd" id="1_m6e3t"]
[ext_resource type="PackedScene" uid="uid://b36ffhv416il1" path="res://3D/3d_dialogue.tscn" id="3_m6e3t"]
[ext_resource type="FontFile" uid="uid://fmbpcembvddm" path="res://Assets/Art/Font/Adventurer.ttf" id="3_vojfp"]

[node name="Inventory_Slot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 160.0
script = ExtResource("1_m6e3t")

[node name="Outer Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.83
offset_right = -47.17
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.985, 0.985)
color = Color(0.737255, 1, 1, 1)

[node name="Inner Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 19.89
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.442911, 0.442911, 0.442911, 1)

[node name="Item Icon" type="Sprite2D" parent="Inner Border"]
position = Vector2(60.73, 38.625)

[node name="Item Quantity" type="Label" parent="Inner Border"]
layout_mode = 0
offset_left = 5.01
offset_right = 45.01
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vojfp")
theme_override_font_sizes/font_size = 50
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -3.0
offset_right = 101.0
offset_bottom = 102.0

[node name="Details Panel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 250.0
offset_bottom = -5.0
color = Color(0.737255, 1, 1, 1)

[node name="ItemName" type="Label" parent="Details Panel"]
layout_mode = 0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vojfp")
theme_override_font_sizes/font_size = 40
text = "Name"

[node name="ItemType" type="Label" parent="Details Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 53.0
offset_right = 45.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_fonts/font = ExtResource("3_vojfp")
theme_override_font_sizes/font_size = 40
text = "Type"

[node name="Item Effect" type="Label" parent="Details Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -23.0
offset_right = 45.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_fonts/font = ExtResource("3_vojfp")
theme_override_font_sizes/font_size = 40
text = "Effect"

[node name="Usage Panel" type="ColorRect" parent="."]
layout_mode = 0
offset_top = -193.0
offset_right = 240.0
offset_bottom = -3.0
color = Color(0.737255, 1, 1, 1)

[node name="EquipButton" type="Button" parent="Usage Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 9.0
offset_right = 116.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_vojfp")
theme_override_font_sizes/font_size = 40
text = "Use / Equip
"

[node name="DescriptionButton" type="Button" parent="Usage Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -59.0
offset_right = 115.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_vojfp")
theme_override_font_sizes/font_size = 40
text = "Inspect"

[node name="AssignButton" type="Button" parent="Usage Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -24.5
offset_right = 235.0
offset_bottom = 24.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vojfp")
theme_override_font_sizes/font_size = 40
text = "Assign"

[node name="3DDialogue" parent="." instance=ExtResource("3_m6e3t")]
visible = false
dialogue_text = Array[String](["Hello World!"])

[connection signal="gui_input" from="ItemButton" to="." method="_on_item_button_gui_input"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="Usage Panel/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="Usage Panel/DescriptionButton" to="." method="_on_description_button_pressed"]
[connection signal="pressed" from="Usage Panel/AssignButton" to="." method="_on_assign_button_pressed"]
